# gameoflife

./: .gitignore  Cargo.toml  build_website.sh  dev.sh  flake.nix  gameoflife.js  index.html
.cargo/: config.toml
.github/workflows/: deploy.yml
src/: grid.rs  main.rs
